# ai-repo-safety-skill

./: .gitignore  .npmignore  .pre-commit-config.ai-repo-safety.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SKILL.md  index.js  package.json  pyproject.toml  renovate.json
.github/: CODEOWNERS  CODEOWNERS.example  pull_request_template.md
.github/workflows/: ci.yml  codeql.optional.yml  dependency-review.yml  publish-npm.yml  publish-pypi.yml  scorecard.yml  security.yml  supply-chain.yml
docs/: opencode.md  release-checklist.md  tooling.md
scripts/: check-package-artifacts.py  run_safety.ps1  run_safety.sh  setup.ps1  setup.sh  smoke-wheel.sh
src/ai_repo_safety/: __init__.py  _guard_contract.py  agent_hooks.py  bootstrap.py  cli.py  fast_scan.py  git_integrity.py  github_guard.py  gitlab_guard.py  hooks.py  incident.py  results.py  sbom.py  scan_output.py  scanner.py  threat_model.py  tools.py  util.py  verify_release.py
src/ai_repo_safety/assets/agents/: incident-responder.md  release-verifier.md  security-reviewer.md
src/ai_repo_safety/assets/docs/: agent-hooks.md  git-history-cleanup.md  git-integrity.md  incident-cleanup.md  mcp-safety.md  mitigation-map.md  opencode.md  threat-model-template.md
src/ai_repo_safety/assets/rules/opengrep/: ai-agent-dangerous-patterns.yml  github-actions-security.yml  gitlab-ci-security.yml  mcp-config-security.yml  python-dangerous-code.yml  python-fastapi-security.yml  secrets-adjacent.yml
src/ai_repo_safety/assets/scripts/: agent_hook_runner.py  forbid_sensitive_files.py  github_read_guard.py  prepush.py  scan_mcp_config.py  scan_secrets.py
src/ai_repo_safety/assets/templates/github/: renovate.json  security_review_issue.md
src/ai_repo_safety/assets/templates/gitlab/: .gitlab-ci.yml
src/ai_repo_safety/assets/templates/gitlab/issue_templates/: security.md
src/ai_repo_safety/assets/templates/gitlab/merge_request_templates/: default.md
src/ai_repo_safety/assets/templates/python/: bandit.yaml  pyproject.ai-repo-safety.toml  settings.py  test_security_basics.py
src/ai_repo_safety/assets/templates/universal/: AGENTS.append.md  AGENTS.md  dockerignore  env.example  gitignore.block  pre-commit-config.yaml
src/ai_repo_safety/assets/workflows/: codeql.optional.yml  sast.yml  scorecard.yml  security.yml  supply-chain.yml
tests/: test_agent_hook_runner.py  test_asset_prepush.py  test_cli_smoke.py  test_fast_scan.py  test_git_integrity.py  test_github_guard.py  test_gitlab_guard.py  test_guard_parity.py  test_hooks.py  test_packaging.py  test_results.py  test_scan_mcp_config.py  test_util_path.py  test_verify_release.py  test_verify_release_integration.py  test_workflows.py
