[project]
name = "ai-repo-safety"
version = "0.1.3"
description = "One universal AI/vibe-coding repo safety skill with OSS guardrails, Python 3.12, uv/uvx, secret scanning, SAST, GitHub read guard, MCP safety, and incident cleanup."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "AI Repo Safety contributors" }
]
keywords = ["security", "ai-coding", "vibe-coding", "secrets", "sast", "github", "mcp", "uv"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://skills.sh/letya999/ai-repo-safety-skill"
Repository = "https://github.com/letya999/ai-repo-safety-skill"
Issues = "https://github.com/letya999/ai-repo-safety-skill/issues"

[project.scripts]
ai-repo-safety = "ai_repo_safety.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_repo_safety"]

[tool.hatch.build.targets.sdist]
include = ["src", "pyproject.toml", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
