[project]
name = "ai-repo-safety"
version = "0.1.5"
description = "One universal AI/vibe-coding repo safety skill with OSS guardrails, Python 3.12, uv/uvx, secret scanning, SAST, GitHub read guard, MCP safety, and incident cleanup."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "AI Repo Safety contributors" }
]
keywords = ["security", "ai-coding", "vibe-coding", "secrets", "sast", "github", "mcp", "uv"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://skills.sh/letya999/ai-repo-safety-skill"
Repository = "https://github.com/letya999/ai-repo-safety-skill"
Issues = "https://github.com/letya999/ai-repo-safety-skill/issues"

[project.scripts]
ai-repo-safety = "ai_repo_safety.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_repo_safety"]
# Explicitly include the asset bundle (templates, scripts, rules, docs,
# agents, workflows). Required for the installed CLI to be able to read
# templates via importlib.resources at runtime. Root-anchored .gitignore
# is also part of the fix; this is a defense-in-depth net.
artifacts = [
  "src/ai_repo_safety/assets/**",
]

[tool.hatch.build.targets.sdist]
# Include only the project sources and explicitly listed top-level files.
# Excluding `assets/templates/universal/AGENTS.md` from sdist previously
# caused installed-wheel `init` to fail with FileNotFoundError; explicit
# include + the root-anchored .gitignore resolve that.
include = [
  "src/ai_repo_safety/**",
  "pyproject.toml",
  "tests/**",
  "README.md",
  "LICENSE",
  "SKILL.md",
  "docs/tooling.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# tests/test_setup_project invokes the live setup pipeline; it must be
# marked so the deterministic CI variant can be selected explicitly.
markers = [
  "network: tests that require network or external tool installation",
  "live: tests that exercise side-effecting CLI flows end-to-end",
]
